--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script>
+    // Set base href only for GitHub Pages before page loads
+    if (window.location.hostname === 'dmytrostychuk.github.io') {
+      document.write('<base href="/Armax/" />');
+    }
+  </script>
   <title>ArmaxMG - Металообробка в Луцьку, лазерна порізка, меблі лофт, зернові ковші для навантажувачів | Армакс МГ</title>
   <meta name="description" content="Металообробка в Луцьку від Армакс МГ. Лазерна порізка металу та труб, виробництво меблів лофт, зернові ковші для навантажувачів JCB, Manitou. Послуги: гнучка листів, фарбування порошковою фарбою, зварювання, слюсарні роботи, механічна обробка. Сільськогосподарське обладнання, меблеві та декоративні елементи." />
   <meta name="keywords" content="металообробка Луцьк, лазерна порізка Луцьк, порізка металу, порізка труб, лазерна різка, обробка металу, гнучка листового металу, фарбування порошковою фарбою, зварювання, слюсарні роботи, механічна обробка, меблі лофт, лофт меблі, зернові ковші, ковші для навантажувачів, ковші JCB, ковші Manitou, навантажувачі, фронтальні навантажувачі, сільськогосподарське обладнання, меблеві елементи, декоративні елементи, Армакс МГ, металообробка Волинь, металообробка Україна" />
   <meta name="author" content="ArmaxMG" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://armax-mg.com.ua/" />
-  <base href="https://dmytrostychuk.github.io/Armax/" />
   <link rel="stylesheet" href="styles/style-min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -209,7 +214,7 @@
         <div class="menu__container">
           <button class="burger-btn"><span></span></button>
           <h3 class="menu__title">
-            <a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.avif" alt="logo" /></a>
+            <a class="menu__link-logo" href="index.html"><img class="menu__logo" src="img/logo.avif" alt="logo" /></a>
           </h3>
           <div class="header__lang nav__list-social">
             <button class="header__btn" data-btn="ua">UA</button>
