--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="js/index.js"></script>
   <script src="js/swiper.js"></script>
-  <script src="../js/form-card.js"></script>
+  <script src="js/form-card.js"></script>
   <script src="js/app.js"></script>
 
 </body>
