--- a/index.html
+++ b/index.html
@@ -671,6 +671,126 @@
         </article>
       </div>
     </section>
+
+    <!-- Testimonials Section -->
+    <section class="section testimonials">
+      <div class="container">
+        <h3 class="section__title">Відгуки наших партнерів</h3>
+        <div class="testimonials__container">
+          <article class="testimonials__card" data-aos="fade-up">
+            <div class="testimonials__header">
+              <div class="testimonials__avatar">
+                <img src="img/partners/partners-5.png" alt="Company 1" class="testimonials__avatar-img" />
+              </div>
+              <div class="testimonials__info">
+                <h4 class="testimonials__name">"Західно український гольф та кантрі клуб"</h4>
+                <p class="testimonials__position">Г. Я. Сениш </p>
+              </div>
+            </div>
+            <div class="testimonials__content">
+              <p class="testimonials__text">
+                "Окремо хочемо відзначити технічну компетентність фахівців ARMAX
+MG. Під час співпраці компанія неодноразово проявляла готовність до
+опрацювання складних технічних завдань, пропонувала інноваційні
+рішення та забезпечувала якісний супровід на всіх етапах - від
+узгодження вимог до контролю якості готової продукції."
+              </p>
+            </div>
+            <div class="testimonials__footer">
+              <div class="testimonials__actions">
+                <button type="button" class="testimonials__view" data-pdf="img/doc/golf.pdf">
+                  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <circle cx="12" cy="12" r="3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  Переглянути
+                </button>
+                <a href="img/doc/golf.pdf" target="_blank" class="testimonials__download" download>
+                  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 15V3M12 15L8 11M12 15L16 11M2 17L2 19C2 20.1046 2.89543 21 4 21L20 21C21.1046 21 22 20.1046 22 19V17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  Завантажити
+                </a>
+              </div>
+            </div>
+          </article>
+
+          <article class="testimonials__card" data-aos="fade-up" data-aos-delay="100">
+            <div class="testimonials__header">
+              <div class="testimonials__avatar">
+                <img src="img/partners/partners-7.png" alt="Company 2" class="testimonials__avatar-img" />
+              </div>
+              <div class="testimonials__info">
+                <h4 class="testimonials__name">"ХЙОРТ КНУДСЕН УКРАЇНА"</h4>
+                <p class="testimonials__position">Олександр ІВАНОВ</p>
+              </div>
+            </div>
+            <div class="testimonials__content">
+              <p class="testimonials__text">
+                "Вважаємо ARMAX MG надійним та професійним партнером і
+                рекомендуємо компанію для реалізації проєктів, що потребують високих
+                стандартів якості та довгострокової взаємодії."
+              </p>
+            </div>
+            <div class="testimonials__footer">
+              <div class="testimonials__actions">
+                <button type="button" class="testimonials__view" data-pdf="img/doc/knudsen.pdf">
+                  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <circle cx="12" cy="12" r="3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  Переглянути
+                </button>
+                <a href="img/doc/knudsen.pdf" target="_blank" class="testimonials__download" download>
+                  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 15V3M12 15L8 11M12 15L16 11M2 17L2 19C2 20.1046 2.89543 21 4 21L20 21C21.1046 21 22 20.1046 22 19V17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  Завантажити
+                </a>
+              </div>
+            </div>
+          </article>
+
+          <article class="testimonials__card" data-aos="fade-up" data-aos-delay="200">
+            <div class="testimonials__header">
+              <div class="testimonials__avatar">
+                <img src="img/partners/partners-8.png" alt="Company 3" class="testimonials__avatar-img" />
+              </div>
+              <div class="testimonials__info">
+                <h4 class="testimonials__name">"Модерн-Експо"</h4>
+                <p class="testimonials__position">О.В. Корнійчук</p>
+              </div>
+            </div>
+            <div class="testimonials__content">
+              <p class="testimonials__text">
+                "За весь період взаємодії ARMAX MG зарекомендувала себе як надійний виробник, який
+відповідально ставиться до виконання поставлених завдань. Вироби вирізняються стабільною
+якістю та точністю виконання, а всі технічні вимоги та специфікації дотримуються в повному
+обсязі. Постачання здійснюються ритмічно та без затримок, а за необхідності компанія легко
+адаптується до змін у графіках і швидко реагує на наші запити.
+              </p>
+            </div>
+            <div class="testimonials__footer">
+              <div class="testimonials__actions">
+                <button type="button" class="testimonials__view" data-pdf="img/doc/modern.pdf">
+                  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <circle cx="12" cy="12" r="3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  Переглянути
+                </button>
+                <a href="img/doc/modern.pdf" target="_blank" class="testimonials__download" download>
+                  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 15V3M12 15L8 11M12 15L16 11M2 17L2 19C2 20.1046 2.89543 21 4 21L20 21C21.1046 21 22 20.1046 22 19V17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  Завантажити
+                </a>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
     
 
     
@@ -908,6 +1028,19 @@
       </div>
     </div>
   </div>
+
+  <!-- PDF Viewer Modal -->
+  <div class="modal modal-pdf" id="pdfModal">
+    <div class="modal__inner modal-pdf__inner">
+      <div class="modal-content modal-pdf__content">
+        <button class="close-button" id="closePdfModal"></button>
+        <div class="modal-pdf__wrapper">
+          <iframe id="pdfViewer" src="" frameborder="0"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="js/lang.js"></script>
   <!-- animation -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
